# kdctl

./: README.md  pyproject.toml
docs/: demo.yaml
src/kdctl/: __init__.py  main.py
